--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier": "2.4.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
